--- a/Notebooks/golden-feathergrass-habitat.ipynb
+++ b/Notebooks/golden-feathergrass-habitat.ipynb
@@ -8,6 +8,13 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,9 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2559477187.py, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    import earthpy.earthexplorer as\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Set Envionmentals\n",
     "\n",
@@ -109,7 +125,7 @@
     "\n",
     "# Can run through study site gdf as loop later\n",
     "\n",
-    "#Plot code here to est geoemetry"
+    "#Plot code here to test geometry"
    ]
   },
   {
@@ -119,8 +135,13 @@
    "outputs": [],
    "source": [
     "#Define import functions here\n",
-    "# soils <-- how the hell do I use this dataset?\n",
-    "# elevation <-- DEM from modis\n",
+    "# Check if arrays or downloads already exist for each layer,  if not \n",
+    "# download and create array\n",
+    "# Merge arrays if necessary \n",
+    "\n",
+    "    \n",
+    "# soils <-- how the hell do I use this dataset? Check readme\n",
+    "# elevation <-- DEM from appears\n",
     "# climate <--- check elsa's post\n",
     "# derived topo <-- ask chatgpt + check old project "
    ]
@@ -131,13 +152,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Prune an Harmonization functions here"
+    "#Prune and Harmonization functions here\n",
+    "# Clip arrays to boundary layer, make new clipped object \n",
+    "# Check if all arrays have same crs, area, and bounds\n",
+    "# throw error if not, print values to compare\n",
+    "# get rid of unneccesary layers\n",
+    "\n",
+    "# \n",
+    "\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
