--- a/Notebooks/golden-feathergrass-habitat.ipynb
+++ b/Notebooks/golden-feathergrass-habitat.ipynb
@@ -71,18 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2559477187.py, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    import earthpy.earthexplorer as\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set Envionmentals\n",
     "\n",
@@ -93,8 +84,8 @@
     "\n",
     "#Third Party\n",
     "import earthpy as et\n",
-    "import earthpy.appears as etapp\n",
-    "import earthpy.earthexplorer as \n",
+    "import earthpy.appeears as etapp\n",
+    "# import earthpy.earthexplorer as \n",
     "import geopandas as gpd\n",
     "import numpy as np\n",
     "import skfuzzy as fuzz\n",
