crate dl directories

--- a/Notebooks/golden-feathergrass-habitat.ipynb
+++ b/Notebooks/golden-feathergrass-habitat.ipynb
@@ -93,13 +93,26 @@
     "# Inlcude rest of modules as needed\n",
     "\n",
     "# Set data directory globals here\n",
-    "# data_dir = os.path.join('asset_folder_here')\n",
-    "# grassland_path = os.path.join(data_dir, 'grass','path_location_here')\n",
-    "# soil_dir = \n",
-    "# climate_dir\n",
-    "# dem_dir\n",
-    "# topo_dir\n",
-    "# vectors_dir"
+    "data_dir = ('/workspaces/golden-feather-grass-habitats/Assets/')\n",
+    "grassland_path = os.path.join(data_dir, 'study-site-boundaries')\n",
+    "raster_bin = os.path.join(data_dir, 'bin', 'rasters')\n",
+    "soil_dir = os.path.join(raster_bin, 'soil')\n",
+    "climate_dir = os.path.join(raster_bin, 'climate')\n",
+    "dem_dir = os.path.join(raster_bin, 'DEM')\n",
+    "topo_dir = os.path.join(raster_bin, 'topo-derive')\n",
+    "vectors_dir = os.path.join(data_dir, 'vector')\n",
+    "\n",
+    "directories = [grassland_path, \n",
+    "               raster_bin, \n",
+    "               soil_dir, \n",
+    "               climate_dir, \n",
+    "               dem_dir, \n",
+    "               topo_dir, \n",
+    "               vectors_dir]\n",
+    "\n",
+    "for a_dir in (directories):\n",
+    "    if not os.path.exists(a_dir):\n",
+    "        os.makedirs(a_dir)"
    ]
   },
   {
@@ -149,7 +162,16 @@
     "# throw error if not, print values to compare\n",
     "# get rid of unneccesary layers\n",
     "\n",
-    "# \n",
+    "# Example of opening a raster file and clipping it to the grassland boundary\n",
+    "with rasterio.open('path_to_raster_file') as src:\n",
+    "    raster_data = src.read(1)\n",
+    "    raster_affine = src.transform\n",
+    "\n",
+    "# Convert the raster data to an xarray DataArray\n",
+    "raster_xr = rioxarray.open_rasterio('path_to_raster_file')\n",
+    "\n",
+    "# Clip the raster data to the grassland boundary\n",
+    "clipped_raster = raster_xr.rio.clip(grassland_boundaries.geometry.apply(mapping), grassland_boundaries.crs)\n",
     "\n",
     "\n",
     "\n"
@@ -160,7 +182,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# start building fuzzy logic model here \n",
+    "\n",
+    "# Example: Defining fuzzy variables and sets\n",
+    "soil_pH = ctrl.Antecedent(np.arange(0, 14, 1), 'soil_pH')\n",
+    "elevation = ctrl.Antecedent(np.arange(0, 3000, 1), 'elevation')  # Example range\n",
+    "precipitation = ctrl.Antecedent(np.arange(0, 500, 1), 'precipitation')  # Example range\n",
+    "habitat_suitability = ctrl.Consequent(np.arange(0, 100, 1), 'habitat_suitability')\n",
+    "\n",
+    "# Define membership functions\n",
+    "soil_pH['acidic'] = fuzz.trimf(soil_pH.universe, [0, 0, 5.5])\n",
+    "# ... continue for other sets\n",
+    "\n",
+    "# Define rules\n",
+    "rule1 = ctrl.Rule(soil_pH['neutral'] & elevation['medium'] & precipitation['moderate'], habitat_suitability['high'])\n",
+    "# ... more rules\n",
+    "\n",
+    "# Control system\n",
+    "habitat_ctrl = ctrl.ControlSystem([rule1, ...])\n",
+    "habitat_simulation = ctrl.ControlSystemSimulation(habitat_ctrl)\n",
+    "\n",
+    "# Applying the model to data\n",
+    "# This would involve iterating over your raster data, applying the model to each pixel\n",
+    "# Example:\n",
+    "habitat_simulation.input['soil_pH'] = 6.5  # Example input\n",
+    "# ... set other inputs\n",
+    "habitat_simulation.compute()\n",
+    "print(habitat_simulation.output['habitat_suitability'])\n",
+    "\n",
+    "# Visualization code goes here"
+   ]
   }
  ],
  "metadata": {
