--- a/Notebooks/Kiowa-Grassland/Kiowa-historical-maca-1950.ipynb
+++ b/Notebooks/Kiowa-Grassland/Kiowa-historical-maca-1950.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Kiowa National Grassland\n",
     "\n",
-    "![Pronghorn in Kiowa National Grassland](attachment:image.jpg){:height=\"50%\" width=\"50%\"}\n",
+    "![Pronghorn in Kiowa National Grassland](https://upload.wikimedia.org/wikipedia/commons/6/68/Antelope%2C_Kiowa_National_Grasslands.jpg){:height=\"50%\" width=\"50%\"}\n",
     "\n",
     "## Location\n",
     "\n",
