--- a/Notebooks/Kiowa-Grassland/Kiowa-historical-maca-1950.ipynb
+++ b/Notebooks/Kiowa-Grassland/Kiowa-historical-maca-1950.ipynb
@@ -507,8 +507,10 @@
     "\n",
     "    # Load and merge the SRTM data arrays\n",
     "print(srtm_paths)\n",
-    "srtm_da = [rxr.open_rasterio(srtm_path, masked=True).squeeze() for srtm_path in srtm_paths][0]\n",
+    "srtm_das = [rxr.open_rasterio(srtm_path, masked=True).squeeze() for srtm_path in srtm_paths]\n",
+    "srtm_da = rxrmerge.merge_arrays(srtm_das)\n",
     "srtm_da = srtm_da.rio.reproject(study_site_gdf.crs)\n",
+    "\n",
     "\n",
     "srtm_da\n",
     "\n"
